# manga-syncer

./: .gitignore  Cargo.toml  LICENSE  README.md  chapter.go  go.mod  go.sum  main.go  manga-syncer.toml.sample  manga.go
src/: chapter.rs  closing.rs  groups.rs  main.rs  manga.rs  util.rs
