[package]
name = "manga-syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
awconf = { git = "https://github.com/awused/awconf" }
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.19.0"
regex = "1.10.6"
rayon = "1.10.0"
# We're mostly limited to one thread anyway
reqwest = { version = "0.12.7", features = ["blocking", "brotli", "deflate", "json", "gzip"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
serde_with = "3.9.0"
tempfile = "3.12.0"
uuid = "1.10.0"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.5"
