[package]
name = "manga-syncer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
awconf = { git = "https://github.com/awused/awconf" }
base64 = "0.22.1"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
rayon = "1.10.0"
# We're mostly limited to one thread anyway
reqwest = { version = "0.12.15", features = ["blocking", "brotli", "deflate", "json", "gzip"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_with = "3.12.0"
tempfile = "3.19.1"
uuid = "1.16.0"
zip = { version = "2.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.6"
